# steep

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  config.yaml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/steep/: main.go
cmd/steep-agent/: main.go
cmd/steep-repl/: cmd_init.go  cmd_merge.go  cmd_node.go  cmd_run.go  cmd_schema.go  cmd_service.go  cmd_snapshot.go  cmd_status.go  cmd_tls.go  main.go
configs/: config.yaml.example  repl.config.yaml.example
configs/litecli/: steep.liteclirc
configs/steep/: config.yaml.example
configs/test/: source.yaml  target.yaml
docker/litecli/: Dockerfile  README.md
docker/pgcli/: Dockerfile  README.md
docs/: BIDIRECTIONAL_REPLICATION.md  BIDIRECTIONAL_REPLICATION_GUIDE.md  DESIGN.md  EXTENSION_MIGRATION.md  GUIDE.md  SSL_CONFIGURATION.md  cli-refactor.md
extensions/steep_repl/: Cargo.toml  steep_repl.control
extensions/steep_repl/src/: audit_log.rs  coordinator_state.rs  databases.rs  fingerprint_functions.rs  health.rs  init_progress.rs  init_slots.rs  lib.rs  merge.rs  merge_audit_log.rs  nodes.rs  notify.rs  progress.rs  schema.rs  schema_fingerprints.rs  snapshot_progress.rs  snapshots.rs  types.rs  utils.rs  work_queue.rs  worker.rs
extensions/steep_repl/tests/pg_regress/expected/: 001_schema.out  002_nodes.out  003_fingerprints.out  004_init_tables.out  005_merge.out  006_merge_audit_log.out  007_snapshot_progress.out
extensions/steep_repl/tests/pg_regress/sql/: 001_schema.sql  002_nodes.sql  003_fingerprints.sql  004_init_tables.sql  005_merge.sql  006_merge_audit_log.sql  007_snapshot_progress.sql  setup.sql
internal/agent/: agent.go  alerter.go  collector.go  instance.go  pidfile.go  pidfile_unix.go  pidfile_windows.go  pool.go  retention.go  schema.go  schema_unix.go  schema_windows.go  service.go  service_helpers.go  (+2 more)
scripts/: dev-tmux.sh  repl-test-lag.sh  repl-test-load.sh  repl-test-setup.sh  test_blocking.sh  test_blocking_chains.sh  test_deadlocks.sh  test_deadlocks_nnode.sh  test_params.go  test_queries.sh
(+511 files in other folders)
